tests/fixtures/qml/reject/js_math_call.qml
import QtQuick 2.15

Item {
    width: 100
    height: 100

    Text {
        text: Math.sin(45)
        color: "#ffffff"
    }
}
